epsilon.test: add XX:MaxPermSize option to t-surefire-p